fixed notification icon not showing up and causing the header to act weird

--- a/CS-3750-Pink_Panthers/wwwroot/css/site.css
+++ b/CS-3750-Pink_Panthers/wwwroot/css/site.css
@@ -147,7 +147,6 @@ a.no-decoration:hover {
 }
 
 .notification {
-    height: 120px;
     border-bottom: solid;
     border-radius: 5px;
 }
